--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pushdata-bitcoin": "^1.0.1",
     "randombytes": "^2.0.1",
     "safe-buffer": "^5.1.1",
+    "buffer-reverse": "1.0.1",
     "tiny-secp256k1": "^0.1.0",
     "typeforce": "^1.11.3",
     "varuint-bitcoin": "^1.0.4",
